--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Necessary Meta Tags-->
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <!-- Link Elements-->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +22,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Shopsmart</title>
+    <meta name="title" content="Shopsmart">
+    <meta 
+      name="description" 
+      content="-temp description-"
+    >
+
+    <!-- Theme Color for mobile browsers-->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="%PUBLIC_URL%">
+    <meta property="og:title" content="Shopsmart">
+    <meta property="og:description" content="-temp description-">
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="%PUBLIC_URL%">
+    <meta property="twitter:title" content="Shopsmart">
+    <meta property="twitter:description" content="-temp description-">
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
